# rstms-template-python

./: .bumpversion.cfg  README.rst  cookiecutter.json  setup.py
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  CONTRIBUTING.rst  Dockerfile  Makefile.cc  README.md  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docker/: Dockerfile  entrypoint
{{cookiecutter.project_slug}}/docs/: cli.rst  conf.py  index.rst
{{cookiecutter.project_slug}}/make/: browser.mk  clean.mk  common.mk  depends.mk  dist.mk  docker.mk  lint.mk  release.mk  test.mk
{{cookiecutter.project_slug}}/make.include/: browser.mk  common.mk  docs.mk  lint.mk  publish.mk  release.mk  test.mk
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  shell.py  version.py
