[build-system]
{%- if cookiecutter.build_with_flit == 'y' %}
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.10"
{% else %}
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = find
{% endif %}


[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
authors = [{name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["{{ cookiecutter.project_slug }}"]
classifiers = [
  "Intended Audience :: Developers",
{% if cookiecutter.deploy_to_pypi == 'n' %}
  "Private :: Do Not Upload",
{% endif %}
{%- set license_classifiers = {
  "MIT license": 'License :: OSI Approved :: MIT License',
  "BSD license": 'License :: OSI Approved :: BSD License',
  "ISC license": 'License :: OSI Approved :: ISC License (ISCL)',
  "Apache Software License 2.0": 'License :: OSI Approved :: Apache Software License',
  "GNU General Public License v3": 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["description"] 

dependencies = [
  {% if cookiecutter.command_line_interface|lower == 'click' %}"click"{% endif %}
]

[tool.flit.module]
name = "{{ cookiecutter.project_slug }}"

[project.optional-dependencies]
dev = [
  {% if cookiecutter.use_black == 'y' -%}"black",{% endif %}
  "bump2version",
  "coverage",
  "isort",
  "flake8",
  "flake8-length",
  {% if cookiecutter.use_pytest == 'y' %}"pytest",{% endif %}
  "python-box",
  "toml",
  "tox"
]
docs = [
  "m2r2",
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme"
]

[project.urls]
Home = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

{%- if cookiecutter.use_black == 'y' %}
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
{%- endif %}

{%- if cookiecutter.use_pytest == 'y' %}
[tool.pytest]
collect_ignore = ['setup.py']
{%- endif %}

{% if 'no' not in cookiecutter.command_line_interface|lower %}
[project.scripts]
{{ cookiecutter.project_cli }} = "{{ cookiecutter.project_slug }}:cli"
{%- endif %}
