{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
[metadata]
name = '{{ cookiecutter.project_slug }}'
version = '{{ cookiecutter.version }}'
description = "{{ cookiecutter.project_short_description }}"
long_description = README.rst
author = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}"
author_email = '{{ cookiecutter.email }}'
{%- if cookiecutter.open_source_license in license_classifiers %}
license = "{{ cookiecutter.open_source_license }}"
{%- endif %}
keywords = '{{ cookiecutter.project_slug }}'
url='https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
{%- if cookiecutter.open_source_license in license_classifiers %}
  {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
  pip>=21.2.4
  wheel>=0.37.0

[options.package_data]

packages = find_packages(include=['{{ cookiecutter.project_slug }}', '{{ cookiecutter.project_slug }}.*']),
[options.extras_require]
dev =
  bump2version==1.0.1
  watchdog==2.1.5
  argh==0.26.2
  flake8==3.9.2
  coverage==5.5
  Sphinx==4.2.0
  isort==5.9.3
  twine==3.4.2
test = 
  tox==3.24.3
  {% if cookiecutter.use_black == 'y' -%}black==21.9b0{% endif %}
  {%- if cookiecutter.use_pytest == 'y' %}pytest>=3{%- endif %} 

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
{%- if cookiecutter.use_black == 'y' %}
max-line-length = 88
extend-ignore = E203

[isort]
profile=black
{%- endif %}

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}


{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[options.entry_points]
console_scripts = 
  {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main
{%- endif %}
