{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
[metadata]
name = {{ cookiecutter.project_slug }}
version =  attr: {{ cookiecutter.project_slug }}.__version__
description = "{{ cookiecutter.project_short_description }}"
long_description = README.rst
author = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}"
author_email = '{{ cookiecutter.email }}'
{%- if cookiecutter.open_source_license in license_classifiers %}
license = "{{ cookiecutter.open_source_license }}"
{%- endif %}
keywords = '{{ cookiecutter.project_slug }}'
url='https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
{%- if cookiecutter.open_source_license in license_classifiers %}
  {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
  pip>=21.3.1
  wheel>=0.37.1
  setuptools>=60.1.0

[options.extras_require]
dev =
  bump2version==1.0.1
  watchdog==2.1.6
  argh==0.26.2
  flake8==4.0.1
  coverage==6.2
  Sphinx==4.3.3
  isort==5.10.1
  {% if cookiecutter.deploy_to_pypi == 'y' -%}twine==3.7.1{% endif %}
  tox==3.24.4
  {% if cookiecutter.use_black == 'y' -%}black==21.11b1{% endif %}
  {% if cookiecutter.use_pytest == 'y' %}pytest==6.2.5{% endif %}

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
{%- if cookiecutter.use_black == 'y' %}
max-line-length = 88
extend-ignore = E203

[isort]
profile=black
{%- endif %}

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}


{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[options.entry_points]
console_scripts = 
  {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main
{%- endif %}
